Update titles to include laughing emoji and new wording

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Adrian Edu Explorer | Find Your Perfect University Programme</title>
+    <title>Find the Perfect Course by the Help of Yngferro Himself 😂</title>
     <meta name="description" content="Explore and filter through university programmes across Kenya based on your interests, location preferences, and cut-off points." />
   </head>
   <body>
